added content and started mobile layout

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,3 +3,7 @@ html {
 }
 
 @import '../styles/navbar';
+@import '../styles/home';
+@import '../styles/menu';
+@import '../styles/about';
+@import '../styles/contact';
