--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,3 +1,4 @@
+/*
 .navbar {
   text-align: center;
 
@@ -7,5 +8,58 @@
 
   .nav-item:hover {
     background-color: #ddd;
+  }
+}
+*/
+
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+
+  .nav-logo {
+    display: block;
+    float: left;
+    width: 100x;
+    height: 100px;
+  }
+
+  .nav-item {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  .nav-item:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  .nav-button {
+    display: none;
+  }
+
+  @media screen and (max-width: 600px) {
+    .nav-item {
+      display: none;
+    }
+    .nav-button {
+      display: block;
+      float: right;
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .navbar.responsive {
+    position: relative;
+    .nav-item {
+      float: none;
+      display: block;
+      text-align: left;
+    }
   }
 }
