finalized mobile ui

--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -8,4 +8,11 @@
   .contact-category {
     margin-bottom: 20px;
   }
+  
+  .gap {
+    float: left;
+    overflow: hidden;
+    height: 1px;
+    width: 0px;
+  }
 }
