--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,18 +1,19 @@
 .navbar {
-  background-color: #333;
+  //background-color: #333;
   overflow: hidden;
+  background-color: rgba(255,255,255,0.3);
+  margin-bottom: 6vh;
 
   .nav-logo {
-    display: block;
-    float: left;
     width: 100x;
     height: 100px;
   }
 
   .nav-item {
+    border-bottom: 1px solid black;
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
