--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -9,6 +9,15 @@
   img:hover {
     opacity: 0.7;
   }
+
+  @include desktop {
+    img {
+      margin: 10px;
+      width: 90%;
+    }
+    display: flex;
+    
+  }
 }
 
 /* The Modal (background) */
