--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,16 @@ html {
   width: 100%
 }
 
+@import '../styles/extra';
+
+.main-container {
+  @include desktop {
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+}
+
 @import '../styles/navbar';
 @import '../styles/home';
 @import '../styles/menu';
@@ -9,3 +19,4 @@ html {
 @import '../styles/contact';
 @import '../styles/footer';
 @import '../styles/bonusSection';
+@import '../styles//layout';
