--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,6 +1,6 @@
 .bonus1 {
   @include desktop {
-    grid-column: 1 / 3;
+    grid-column: 2 / 3;
     grid-row: 1 / 1;
   }
 }
@@ -14,7 +14,7 @@
 
 .bonus2 {
   @include desktop {
-    grid-column: 1 / 3;
+    grid-column: 2 / 3;
     grid-row: 3 / 3;
   }
 }
@@ -25,13 +25,32 @@
     grid-row: 4 / 4;
   }
 }
-/*
-.contact {
+
+#img1 {
   @include desktop {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: 2;
+    grid-column: 1 / 2;
+    grid-row: 1 / 1;
+
+    width: 100%;
+    max-height: 500px;
+    object-fit: cover;
+    border: 4px solid black;
   }
 }
-*/
+
+#img2 {
+  @include desktop {
+    height: 100%;
+    object-fit: cover;
+    border: 4px solid black;
+  }
+}
+
+#img3 {
+  width: 100%;
+  @include desktop {
+    grid-column: 1 / 2;
+    grid-row: 3 / 3;
+    border: 4px solid black;
+  }
+}
