--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -1,3 +1,12 @@
+.menu-container {
+  @include desktop {
+    margin: 0 auto;
+    max-width: 1500px;
+    background-color: white;
+  }
+}
+
+
 .img-container {
   img {
     width: 100%;
